--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -79,6 +79,16 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - platform: "macos-latest"
+            args: "--target aarch64-apple-darwin"
+          - platform: "macos-latest"
+            args: "--target x86_64-apple-darwin"
+          - platform: "ubuntu-22.04"
+            args: ""
+          - platform: "ubuntu-22.04"
+            args: "--target aarch64-unknown-linux-gnu"
+          - platform: "windows-latest"
+            args: ""
           - platform: "windows-latest"
             args: "--target aarch64-pc-windows-msvc"
 
@@ -101,13 +111,16 @@ jobs:
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || matrix.platform == 'windows-latest' && contains(matrix.args, 'aarch64') && 'aarch64-pc-windows-msvc' || '' }}
+          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || matrix.platform == 'windows-latest' && contains(matrix.args, 'aarch64') && 'aarch64-pc-windows-msvc' || matrix.platform == 'ubuntu-22.04' && contains(matrix.args, 'aarch64') && 'aarch64-unknown-linux-gnu' || '' }}
 
       - name: install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.0-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
+          if [[ "${{ matrix.args }}" == *"aarch64"* ]]; then
+            sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+          fi
 
       - name: install frontend dependencies
         run: yarn install
@@ -130,8 +143,13 @@ jobs:
 
           # 根据平台设置目录和文件名
           if [[ "${{ matrix.platform }}" == "ubuntu-22.04" ]]; then
-            BINARY_PATH="src-tauri/target/release"
-            ARTIFACT_NAME="binary_${VERSION}_linux-x86_64.zip"
+            if [[ "${{ matrix.args }}" == *"aarch64"* ]]; then
+              BINARY_PATH="src-tauri/target/aarch64-unknown-linux-gnu/release"
+              ARTIFACT_NAME="binary_${VERSION}_linux-arm64.zip"
+            else
+              BINARY_PATH="src-tauri/target/release"
+              ARTIFACT_NAME="binary_${VERSION}_linux-x86_64.zip"
+            fi
             BINARY_NAME="updater"
           elif [[ "${{ matrix.platform }}" == "windows-latest" ]]; then
             if [[ "${{ matrix.args }}" == *"aarch64"* ]]; then
