--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -119,7 +119,15 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.0-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
           if [[ "${{ matrix.args }}" == *"aarch64"* ]]; then
+            # 安装ARM64交叉编译所需的包
             sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+            sudo apt-get install -y libglib2.0-dev-arm64-cross libwebkit2gtk-4.0-dev-arm64-cross libwebkit2gtk-4.1-dev-arm64-cross
+            sudo apt-get install -y pkg-config-aarch64-linux-gnu
+
+            # 配置pkg-config以支持交叉编译
+            echo "PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig" >> $GITHUB_ENV
+            echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
+            echo "PKG_CONFIG_SYSROOT_DIR=/usr/aarch64-linux-gnu" >> $GITHUB_ENV
           fi
 
       - name: install frontend dependencies
