--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,14 +34,6 @@ jobs:
             echo "should_release=true" >> $GITHUB_OUTPUT
           fi
 
-      - name: Update version in tauri.conf.json
-        if: steps.check-tag.outputs.should_release == 'true'
-        run: |
-          VERSION=${{ steps.get-version.outputs.version }}
-          # 修改 tauri.conf.json 中的版本号
-          jq --arg version "$VERSION" '.version = $version' src-tauri/tauri.conf.json > src-tauri/tauri.conf.json.tmp
-          mv src-tauri/tauri.conf.json.tmp src-tauri/tauri.conf.json
-
   create-release:
     needs: check-version
     if: needs.check-version.outputs.should_release == 'true'
@@ -85,8 +77,6 @@ jobs:
             args: "--target x86_64-apple-darwin"
           - platform: "ubuntu-22.04"
             args: ""
-          - platform: "ubuntu-22.04"
-            args: "--target aarch64-unknown-linux-gnu"
           - platform: "windows-latest"
             args: ""
           - platform: "windows-latest"
@@ -118,17 +108,6 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.0-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
-          if [[ "${{ matrix.args }}" == *"aarch64"* ]]; then
-            # 安装ARM64交叉编译所需的包
-            sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
-            sudo apt-get install -y libglib2.0-dev-arm64-cross libwebkit2gtk-4.0-dev-arm64-cross libwebkit2gtk-4.1-dev-arm64-cross
-            sudo apt-get install -y pkg-config-aarch64-linux-gnu
-
-            # 配置pkg-config以支持交叉编译
-            echo "PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig" >> $GITHUB_ENV
-            echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
-            echo "PKG_CONFIG_SYSROOT_DIR=/usr/aarch64-linux-gnu" >> $GITHUB_ENV
-          fi
 
       - name: install frontend dependencies
         run: yarn install
@@ -138,6 +117,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           releaseId: ${{ needs.create-release.outputs.release_id }}
+          appVersion: ${{ needs.check-version.outputs.version }}
           args: ${{ matrix.args }}
 
       - name: Upload binary artifacts
@@ -151,14 +131,8 @@ jobs:
 
           # 根据平台设置目录和文件名
           if [[ "${{ matrix.platform }}" == "ubuntu-22.04" ]]; then
-            if [[ "${{ matrix.args }}" == *"aarch64"* ]]; then
-              BINARY_PATH="src-tauri/target/aarch64-unknown-linux-gnu/release"
-              ARTIFACT_NAME="binary_${VERSION}_linux-arm64.zip"
-            else
-              BINARY_PATH="src-tauri/target/release"
-              ARTIFACT_NAME="binary_${VERSION}_linux-x86_64.zip"
-            fi
-            BINARY_NAME="updater"
+            BINARY_PATH="src-tauri/target/release"
+            ARTIFACT_NAME="binary_${VERSION}_linux-x86_64.zip"
           elif [[ "${{ matrix.platform }}" == "windows-latest" ]]; then
             if [[ "${{ matrix.args }}" == *"aarch64"* ]]; then
               BINARY_PATH="src-tauri/target/aarch64-pc-windows-msvc/release"
